Added cli module

--- a/stable-paxos/pom.xml
+++ b/stable-paxos/pom.xml
@@ -13,6 +13,7 @@
         <module>client</module>
         <module>server</module>
         <module>common</module>
+        <module>cli</module>
     </modules>
 
     <properties>
