Added multi-threading to enable multiple concurrent clients

--- a/stable-paxos/server/pom.xml
+++ b/stable-paxos/server/pom.xml
@@ -38,7 +38,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.MessageServer</mainClass>
+                            <mainClass>org.example.Server</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
