Added a class for Channel Management and set up server class

--- a/stable-paxos/pom.xml
+++ b/stable-paxos/pom.xml
@@ -143,7 +143,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.Main</mainClass>
+                            <mainClass>org.example.CliApp</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
