--- a/stable-paxos/pom.xml
+++ b/stable-paxos/pom.xml
@@ -75,6 +75,11 @@
             <version>4.32.0</version>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>4.32.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.os72</groupId>
             <artifactId>protoc-jar-maven-plugin</artifactId>
             <version>3.11.4</version>
